Add IntelliJ setup for formatting in CONTRIBUTING.md